--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             مرحبا بكم
           </a>
         </li>
-        <li class="show_child">
+        <li class="show_child1">
           <a href="javascript:" class="click">
             الوضوء<i class="fas fa-hand-point-left"></i>
           </a>
@@ -78,10 +78,57 @@
             </li>
           </ul>
         </li>
-        <li>
-          <a href="#الصلاه">
-            الصلاه
+        <li class="show_child2">
+          <a href="javascript:" class="click">
+            الصلاه<i class="fas fa-hand-point-left"></i>
           </a>
+          <ul class="ul-2">
+            <li>
+              <a href="#شروطه">
+                عدد الصلوات المكتوبه
+              </a>
+            </li>
+            <li>
+              <a href="#شروطه">
+                علي من تجب
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                شروطها
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                اركانها
+              </a>
+            </li>
+            <li>
+              <a href="#">
+              واجباتها
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                سننها
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                مبطلاتها
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                ما يكره
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                حكم تارك الصلاه
+              </a>
+            </li>
+          </ul>
         </li>
         <li>
           <a href="#الصلاه">
