change header name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- icon -->
   <link rel="icon" href="images/img.png" type="image/x-icon">
   <!--  css style sheet "nour "-->
-  <link rel="stylesheet" href="css/nour.css">
+  <link rel="stylesheet" href="css/header.css">
   <!-- master style sheet  -->
   <link rel="stylesheet" href="css/master.css">
   <title>صلي معنا</title>
