--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/header.css">
   <!-- master style sheet  -->
   <link rel="stylesheet" href="css/master.css">
+  <!-- for test -->
   <title>صلي معنا</title>
 </head>
 
