test comment after head tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- for test -->
   <title>صلي معنا</title>
 </head>
-
+<!-- test comment -->
 <body dir="rtl">
   <!-- start Menu  -->
   <header class="header">
