prayer_page_1 created

--- a/contact_us.html
+++ b/contact_us.html
@@ -87,7 +87,7 @@
           </a>
           <ul class="ul-2">
             <li>
-              <a href="#شروطه">
+              <a href="prayer_page_1.html">
                 عدد الصلوات المكتوبه
               </a>
             </li>
