--- a/prayer_page_1.html
+++ b/prayer_page_1.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="css/header.css">
   <!-- master style sheet  -->
   <link rel="stylesheet" href="css/master.css">
+  <!-- prayer_page_1 style sheet  -->
+  <link rel="stylesheet" href="css/prayer_page_1.css">
   <!-- for test -->
   <title>صلي معنا</title>
 </head>
@@ -85,7 +87,7 @@
           </a>
           <ul class="ul-2">
             <li>
-              <a href="prayer_page_1.html">
+              <a href="#شروطه">
                 عدد الصلوات المكتوبه
               </a>
             </li>
@@ -144,6 +146,15 @@
       </ul>
   </header>
   <!-- End menu -->
+  <section>
+    <h1>عدد الصلوات المكتوبه</h1>
+    <p>عدد الصلوات المكتوبة خمس، وهي: الفجر والظهر والعصر والمغرب والعشاء. وهي مجمع عليها، وقد دلّ على ذلك حديث طلحة بن عبيد الله أن أعرابياً قال: يا رسول الله ماذا فرض الله عليَّ من الصلاة؟ قال: (خمس صلوات في اليوم والليلة .. <span id="hadith1">الحديث</span>) (1)، وحديث أنس - رضي الله عنه - في قصة الرجل من أهل البادية، وقوله للنبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: وزعم رسولك أن علينا خمس صلوات في يومنا وليلتنا. قال - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (صدق) ... <span id="hadith2">الحديث</span> (2).</p><hr>
+    <ol>
+      <li>الراوي : طلحة بن عبيدالله | المحدث : البخاري | المصدر : صحيح البخاري | الصفحة أو الرقم : 1891 | خلاصة حكم المحدث : [صحيح]</li>
+      <li>الراوي : أنس بن مالك | المحدث : مسلم | المصدر : صحيح مسلم
+الصفحة أو الرقم : 12 | خلاصة حكم المحدث : [صحيح]</li>
+    </ol>
+  </section>
 </body>
 
 </html>
