prayer_page_2 created

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="prayer_page_2.html">
                 علي من تجب
               </a>
             </li>
