--- a/prayer_page_2.html
+++ b/prayer_page_2.html
@@ -87,12 +87,12 @@
           </a>
           <ul class="ul-2">
             <li>
-              <a href="javascript:">
+              <a href="prayer_page_1.html">
                 عدد الصلوات المكتوبه
               </a>
             </li>
             <li>
-              <a href="prayer_page_2.html">
+              <a href="javascript:">
                 علي من تجب
               </a>
             </li>
@@ -147,12 +147,10 @@
   </header>
   <!-- End menu -->
   <section>
-    <h1>عدد الصلوات المكتوبه</h1>
-    <p>عدد الصلوات المكتوبة خمس، وهي: الفجر والظهر والعصر والمغرب والعشاء. وهي مجمع عليها، وقد دلّ على ذلك حديث طلحة بن عبيد الله أن أعرابياً قال: يا رسول الله ماذا فرض الله عليَّ من الصلاة؟ قال: (خمس صلوات في اليوم والليلة .. <span id="hadith1">الحديث</span>) (1)، وحديث أنس - رضي الله عنه - في قصة الرجل من أهل البادية، وقوله للنبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: وزعم رسولك أن علينا خمس صلوات في يومنا وليلتنا. قال - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (صدق) ... <span id="hadith2">الحديث</span> (2).</p><hr>
+    <h1>على من تجب؟</h1>
+    <p>تجب على المسلم البالغ العاقل، غيرَ الحائض والنفساء، ويؤمر بها الصبي إذا بلغ سبع سنين، ويُضرب عليها لعشر؛ لحديث: (رفع القلم عن ثلاثة)، فذكر منها: (وعن الصَّبيِّ حتى يحتلم)، ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (مروا أولادكم بالصلاة لسبع، واضربوهم عليها لعشر، وفَرِّقوا بينهم في المضاجع) (1).</p><hr>
     <ol>
-      <li>الراوي : طلحة بن عبيدالله | المحدث : البخاري | المصدر : صحيح البخاري | الصفحة أو الرقم : 1891 | خلاصة حكم المحدث : [صحيح]</li>
-      <li>الراوي : أنس بن مالك | المحدث : مسلم | المصدر : صحيح مسلم
-الصفحة أو الرقم : 12 | خلاصة حكم المحدث : [صحيح]</li>
+      <li>رواه أحمد (3/ 201)، وأبو داود برقم (494)، والترمذي برقم (407) وقال: "حديث حسن"، وصححه الحاكم في المستدرك (1/ 201)، وصححه الألباني (الإرواء برقم 247).</li>
     </ol>
   </section>
 </body>
