--- a/prayer_page_2.html
+++ b/prayer_page_2.html
@@ -20,7 +20,7 @@
   <!-- master style sheet  -->
   <link rel="stylesheet" href="css/master.css">
   <!-- prayer_page_1 style sheet  -->
-  <link rel="stylesheet" href="css/prayer_page_1.css">
+  <link rel="stylesheet" href="css/general_section.css">
   <!-- for test -->
   <title>صلي معنا</title>
 </head>
