--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_3.html">
                 شروطها
               </a>
             </li>
