--- a/prayer_page_2.html
+++ b/prayer_page_2.html
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_3.html">
                 شروطها
               </a>
             </li>
