start work in prayer_page_4

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_4.html">
                 اركانها
               </a>
             </li>
