--- a/prayer_page_1.html
+++ b/prayer_page_1.html
@@ -102,7 +102,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_4.html">
                 اركانها
               </a>
             </li>
