--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
           </a>
           <ul class="ul-1">
             <li>
-              <a href="#تعريفه و أحكامه">
+              <a href="sec1.html">
                 تعريفه و أحكامه
               </a>
             </li>
             <li>
-              <a href="#(الدليل علي وجوبه(من/متي">
+              <a href="sec2.html">
                 الدليل علي وجوبه(من/متي)
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="sec3.htm">
                 شروطه
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="sec4.htm">
                 فروضه
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="sec5.htm">
                 سننه
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="sec6.htm">
                 نواقضه
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="sec7.htm">
                 ما يجب له الوضوء
               </a>
             </li>
             <li>
-              <a href="#شروطه">
+              <a href="sec8.htm">
                 ما يستحب له الوضوء
               </a>
             </li>
