--- a/sec2.html
+++ b/sec2.html
@@ -40,7 +40,7 @@
                 </a>
                 <ul class="ul-1">
                     <li>
-                        <a href="javascript:">
+                        <a href="sec1.html">
                             تعريفه و أحكامه
                         </a>
                     </li>
@@ -50,32 +50,32 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec3.htm">
                             شروطه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec4.htm">
                             فروضه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec5.htm">
                             سننه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec6.htm">
                             نواقضه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec7.htm">
                             ما يجب له الوضوء
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec8.htm">
                             ما يستحب له الوضوء
                         </a>
                     </li>
