--- a/sec3.htm
+++ b/sec3.htm
@@ -40,42 +40,42 @@
                 </a>
                 <ul class="ul-1">
                     <li>
-                        <a href="javascript:">
+                        <a href="sec1.html">
                             تعريفه و أحكامه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec2.html">
                             الدليل علي وجوبه(من/متي)
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="javascript:">
                             شروطه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec4.htm">
                             فروضه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec5.htm">
                             سننه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec6.htm">
                             نواقضه
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec7.htm">
                             ما يجب له الوضوء
                         </a>
                     </li>
                     <li>
-                        <a href="#شروطه">
+                        <a href="sec8.htm">
                             ما يستحب له الوضوء
                         </a>
                     </li>
