--- a/sec6.htm
+++ b/sec6.htm
@@ -40,27 +40,27 @@
                 </a>
                 <ul class="ul-1">
                     <li>
-                        <a href="javascript:">
+                        <a href="sec1.html">
                             تعريفه و أحكامه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec2.html">
                             الدليل علي وجوبه(من/متي)
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec3.htm">
                             شروطه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec4.htm">
                             فروضه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec5.htm">
                             سننه
                         </a>
                     </li>
@@ -70,12 +70,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec7.htm">
                             ما يجب له الوضوء
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec8.htm">
                             ما يستحب له الوضوء
                         </a>
                     </li>
