--- a/sec8.htm
+++ b/sec8.htm
@@ -40,37 +40,37 @@
                 </a>
                 <ul class="ul-1">
                     <li>
-                        <a href="javascript:">
+                        <a href="sec1.html">
                             تعريفه و أحكامه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec2.html">
                             الدليل علي وجوبه(من/متي)
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec3.htm">
                             شروطه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec4.htm">
                             فروضه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec5.htm">
                             سننه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec6.htm">
                             نواقضه
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="sec7.htm">
                             ما يجب له الوضوء
                         </a>
                     </li>
