--- a/sec7.htm
+++ b/sec7.htm
@@ -150,12 +150,12 @@
         <h1>  
             ما يجب له الوضوء
         </h1>
-        <p>
+        <pre>
             ويجب على المكلف فعل الوضوء للأمور الآتية:
             1 - الصلاة: لحديث ابن عمر مرفوعاً: (لا يقبل الله صلاة بغير طُهُور، ولا صدقة من غلول) (4).
             2 - الطواف بالبيت الحرام فرضاً كان أو نفلاً: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - (فإنه توضأ ثم طاف بالبيت) (5)، ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الطواف بالبيت صلاة إلا أن الله أباح فيه الكلام) (6)، ولمنعه الحائض من الطواف حتى تطهر (7).
             3 - مس المصحف ببشرته بلا حائل: لقوله تعالى: (لَا يَمَسُّهُ إِلَّا الْمُطَهَّرُونَ) [الواقعة: 79]. ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يمس القرآن إلا طاهر) (1).
-        </p>
+        </pre>
         <hr>
         <ol>
             <li>
