--- a/sec1.html
+++ b/sec1.html
@@ -149,9 +149,9 @@
     <section>
         <h1>تعريفه و أحكامه</h1>
         <p>
-            الوُضوء  لغة: مشتق من الوضاءة، وهي الحسن والنظافة.
-            وشرعاً: استعمال الماء في الأعضاء الأربعة -وهي الوجه واليدان والرأس والرجلان- على صفة مخصوصة في الشرع، على وجه التعبد لله تعالى.
-            اما حكم الوضوء هو :فهو واجب , ولا يصح الصلاه بدونه .
+            الوُضوء  لغة: مشتق من الوضاءة، وهي الحسن والنظافة. <br>
+            وشرعاً: استعمال الماء في الأعضاء الأربعة -وهي الوجه واليدان والرأس والرجلان- على صفة مخصوصة في الشرع، على وجه التعبد لله تعالى. <br>
+            <span class="til">أما حكم الوضوء هو :</span> فهو واجب , ولا يصح الصلاه بدونه .
         </p>
         <hr>
         <ol>
