--- a/sec3.htm
+++ b/sec3.htm
@@ -151,13 +151,13 @@
             شروط الوضوء
         </h1>
         <p>
-            ويشترط لصحة الوضوء ما يأتي:
-            أ) الإسلام، والعقل، والتمييز، فلا يصح من الكافر، ولا المجنون، ولا يكون معتبراً من الصغير الذي دون سن التمييز.
-            ب) النية: لحديث: (إنما الأعمال بالنيات) (1). ولا يشرع التلفظ بها؛ لعدم ثبوته عن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -.
-            ج) الماء الطهور: لما تقدم في المياه، أما الماء النجس فلا يصح الوضوء به.
-            د) إزالة ما يمنع وصول الماء إلى البشرة، من شمع أو عجين ونحوهما: كطلاء الأظافر الذي يعرف بين النساء اليوم.
-            هـ) الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم.
-            و) الموالاة و الترتيب.
+            <span class="til"> ويشترط لصحة الوضوء ما يأتي:</span> <br>
+            أ) الإسلام، والعقل، والتمييز، فلا يصح من الكافر، ولا المجنون، ولا يكون معتبراً من الصغير الذي دون سن التمييز. <br>
+            ب) النية: لحديث: (إنما الأعمال بالنيات) (1). ولا يشرع التلفظ بها؛ لعدم ثبوته عن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -. <br>
+            ج) الماء الطهور: لما تقدم في المياه، أما الماء النجس فلا يصح الوضوء به. <br>
+            د) إزالة ما يمنع وصول الماء إلى البشرة، من شمع أو عجين ونحوهما: كطلاء الأظافر الذي يعرف بين النساء اليوم. <br>
+            هـ) الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم. <br>
+            و) الموالاة و الترتيب. <br>
             ح) غسل جميع الأعضاء الواجب غسلها.
         </p>
         <hr>
