--- a/sec4.htm
+++ b/sec4.htm
@@ -151,13 +151,13 @@
             فروض الوضوء
         </h1>
         <p>
-            1 - غسل الوجه بكامله؛ لقوله تعالى: (إِذَا قُمْتُمْ إِلَى الصَّلَاةِ فَاغْسِلُوا وُجُوهَكُمْ) [المائدة: 6]، ومنه المضمضة والاستنشاق؛ لأن الفم والأنف من الوجه.
-            2 - غسل اليدين إلى المرفقين؛ لقوله تعالى: (وَأَيْدِيَكُمْ إِلَى الْمَرَافِقِ) [المائدة: 6].
-            3 - مسح الرأس كله مع الأذنين؛ لقوله تعالى: (وَامْسَحُوا بِرُءُوسِكُمْ) [المائدة: 6].
-            وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الأذنان من الرأس) (2). فلا يُجزئ مسح بعض الرأس دون بعضه.
-            4 - غسل الرجلين إلى الكعبين؛ لقوله تعالى: (وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ) [المائدة: 6].
-            5 - الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (1) وغيره.
-            6 - الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (2)، فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل.
+            1 - غسل الوجه بكامله؛ <span>لقوله تعالى: (إِذَا قُمْتُمْ إِلَى الصَّلَاةِ فَاغْسِلُوا وُجُوهَكُمْ) [المائدة: 6]</span> ومنه المضمضة والاستنشاق؛ لأن الفم والأنف من الوجه. <br>
+            2 - غسل اليدين إلى المرفقين؛ <span>لقوله تعالى: (وَأَيْدِيَكُمْ إِلَى الْمَرَافِقِ) [المائدة: 6</span> . <br>
+            3 - مسح الرأس كله مع الأذنين: <span>لقوله تعالى: (وَامْسَحُوا بِرُءُوسِكُمْ) [المائدة: 6</span>. 
+            <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الأذنان من الرأس) (2) </span> فلا يُجزئ مسح بعض الرأس دون بعضه. <br>
+            4 - غسل الرجلين إلى الكعبين؛ <span>لقوله تعالى: (وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ) [المائدة: 6]</span>. <br>
+            5 - الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (1) وغيره. <br>
+            6 - الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (2)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل. 
         </p>
         <hr>
         <ol>
