--- a/sec8.htm
+++ b/sec8.htm
@@ -151,12 +151,12 @@
             ما يستحب له الوضوء
         </h1>
         <p>
-            يستحب الوضوء ويندب في الأحوال التالية:
-            1 - عند ذكر الله تعالى وقراءة القرآن.
-            2 - عند كل صلاة: لمواظبته - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - على ذلك، كما في حديث أنس - رضي الله عنه - قال: (كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأعند كل صلاة) (2).
-            3 - يستحب الوضوء للجنب إذا أراد أن يعود للجماع، أو أراد النوم أو الأكل أو الشرب: لحديث أبي سعيد الخدري - رضي الله عنه - أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (إذا أتى أحدكم أهله، ثم أراد أن يعود، فليتوضأ) (3). ولحديث عائشة رضي الله عنها: (أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - كان إذا أراد أن ينام وهو جنب، توضأ وضوءه للصلاة، قبل أن ينام) (4). وفي رواية لها: (فأراد أن يأكل أو ينام) (5).
-            4 - الوضوء قبل الغسل: لحديث عائشة رضي الله عنها قالت: (كان رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - إذا اغتسل من الجنابة يبدأ، فيغسل يديه، ثم يفرغ بيمينه على شماله، فيغسل فرجه، ثم يتوضأ وضوءه للصلاة ... ) الحديث (6).
-            5 - عند النوم: لحديث البراء بن عازب - رضي الله عنه - قال: قال النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إذا أتيت مضجعك فتوضَّأ وضوءك للصلاة، ثم اضطجع على شقك الأيمن ... ) الحديث (7).
+            <span class="til">يستحب الوضوء ويندب في الأحوال التالية:</span> <br>
+            1 - عند ذكر الله تعالى وقراءة القرآن. <br>
+            2 - عند كل صلاة: لمواظبته - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - على ذلك، كما <span class="dif">في حديث أنس - رضي الله عنه - قال: (كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأعند كل صلاة) (2)</span> . <br>
+            3 - يستحب الوضوء للجنب إذا أراد أن يعود للجماع، أو أراد النوم أو الأكل أو الشرب: <span class="dif">لحديث أبي سعيد الخدري - رضي الله عنه - أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (إذا أتى أحدكم أهله، ثم أراد أن يعود، فليتوضأ) (3)</span> و <span class="dif"> لحديث عائشة رضي الله عنها: (أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - كان إذا أراد أن ينام وهو جنب، توضأ وضوءه للصلاة، قبل أن ينام) (4). وفي رواية لها: (فأراد أن يأكل أو ينام) (5)</span> . <br>
+            4 - الوضوء قبل الغسل: لحديث عائشة رضي الله عنها قالت: <span class="dif">(كان رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - إذا اغتسل من الجنابة يبدأ، فيغسل يديه، ثم يفرغ بيمينه على شماله، فيغسل فرجه، ثم يتوضأ وضوءه للصلاة ... ) الحديث (6)</span> . <br>
+            5 - عند النوم: لحديث البراء بن عازب - رضي الله عنه - قال: <span class="dif">قال النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إذا أتيت مضجعك فتوضَّأ وضوءك للصلاة، ثم اضطجع على شقك الأيمن ... ) الحديث (7)</span> .
         </p>
         <hr>
         <ol>
