--- a/sec5.htm
+++ b/sec5.htm
@@ -151,7 +151,7 @@
             سنن الوضوء
         </h1>
         <p>
-            هناك أفعال يستحب فعلها عند الوضوء ويؤجر عليها من فعلها، ومن تركها فلا حرج عليه، وتسمى هذه الأفعال بسنن الوضوء، وهي: <br>
+            <span class="til"> هناك أفعال يستحب فعلها عند الوضوء ويؤجر عليها من فعلها، ومن تركها فلا حرج عليه، وتسمى هذه الأفعال بسنن الوضوء، وهي: <br></span>
             1 - التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (3)</span> . <br>
             2 - السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (4</span> . <br>
             3 - غسل الكفين ثلاثاً في أول الوضوء: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - ذلك، إذ كان يغسل كفيه ثلاثاً كما ورد في صفة وضوئه.
