--- a/sec1.html
+++ b/sec1.html
@@ -148,16 +148,18 @@
     <!-- End menu -->
     <section>
         <h1>تعريفه و أحكامه</h1>
-        <p>
+        <div>
             الوُضوء  لغة: مشتق من الوضاءة، وهي الحسن والنظافة. <br>
             وشرعاً: استعمال الماء في الأعضاء الأربعة -وهي الوجه واليدان والرأس والرجلان- على صفة مخصوصة في الشرع، على وجه التعبد لله تعالى. <br>
-            <span class="til">أما حكم الوضوء هو :</span> فهو واجب , ولا يصح الصلاه بدونه .
-        </p>
+            <h4>أما حكم الوضوء هو :</h4> فهو واجب , ولا يصح الصلاه بدونه .
+        </div>
         <hr>
         <ol>
             <li>
-                رواه أحمد (3/ 201)، وأبو داود برقم (494)، والترمذي برقم (407) وقال: "حديث حسن"، وصححه الحاكم في المستدرك
-                (1/ 201)، وصححه الألباني (الإرواء برقم 247).
+            صححه الألباني (الإرواء برقم 247)
+            </li>
+            <li>
+                (1/ 201) صححه الحاكم في المستدرك 
             </li>
         </ol>
     </section>
