--- a/sec3.htm
+++ b/sec3.htm
@@ -150,21 +150,36 @@
         <h1>  
             شروط الوضوء
         </h1>
-        <p>
-            <span class="til"> ويشترط لصحة الوضوء ما يأتي:</span> <br>
-            أ) الإسلام، والعقل، والتمييز، فلا يصح من الكافر، ولا المجنون، ولا يكون معتبراً من الصغير الذي دون سن التمييز. <br>
-            ب) النية: لحديث: (إنما الأعمال بالنيات) (1). ولا يشرع التلفظ بها؛ لعدم ثبوته عن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -. <br>
-            ج) الماء الطهور: لما تقدم في المياه، أما الماء النجس فلا يصح الوضوء به. <br>
-            د) إزالة ما يمنع وصول الماء إلى البشرة، من شمع أو عجين ونحوهما: كطلاء الأظافر الذي يعرف بين النساء اليوم. <br>
-            هـ) الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم. <br>
-            و) الموالاة و الترتيب. <br>
-            ح) غسل جميع الأعضاء الواجب غسلها.
-        </p>
+            <div>
+                <h4> ويشترط لصحة الوضوء ما يأتي:</h4> 
+                <ol>
+                    <li>
+                        الإسلام، والعقل، والتمييز، فلا يصح من الكافر، ولا المجنون، ولا يكون معتبراً من الصغير الذي دون سن التمييز
+                    </li>
+                    <li>
+                        النية: لحديث: (إنما الأعمال بالنيات) (1). ولا يشرع التلفظ بها؛ لعدم ثبوته عن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ
+                    </li>
+                    <li>
+                        الماء الطهور: لما تقدم في المياه، أما الماء النجس فلا يصح الوضوء به. 
+                    </li>
+                    <li>
+                        إزالة ما يمنع وصول الماء إلى البشرة، من شمع أو عجين ونحوهما: كطلاء الأظافر الذي يعرف بين النساء اليوم. 
+                    </li>
+                    <li>
+                        الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم. 
+                    </li>
+                    <li>
+                        الموالاة و الترتيب.
+                    </li>
+                    <li>
+                        غسل جميع الأعضاء الواجب غسلها.
+                    </li>
+                </ol>
+            </div>
         <hr>
         <ol>
             <li>
-                رواه أحمد (3/ 201)، وأبو داود برقم (494)، والترمذي برقم (407) وقال: "حديث حسن"، وصححه الحاكم في المستدرك
-                (1/ 201)، وصححه الألباني (الإرواء برقم 247).
+                (1) الترمذي برقم (407) وقال: "حديث حسن"
             </li>
         </ol>
     </section>
