--- a/sec4.htm
+++ b/sec4.htm
@@ -150,19 +150,35 @@
         <h1>  
             فروض الوضوء
         </h1>
-        <p>
-            1 - غسل الوجه بكامله؛ <span>لقوله تعالى: (إِذَا قُمْتُمْ إِلَى الصَّلَاةِ فَاغْسِلُوا وُجُوهَكُمْ) [المائدة: 6]</span> ومنه المضمضة والاستنشاق؛ لأن الفم والأنف من الوجه. <br>
-            2 - غسل اليدين إلى المرفقين؛ <span>لقوله تعالى: (وَأَيْدِيَكُمْ إِلَى الْمَرَافِقِ) [المائدة: 6</span> . <br>
-            3 - مسح الرأس كله مع الأذنين: <span>لقوله تعالى: (وَامْسَحُوا بِرُءُوسِكُمْ) [المائدة: 6</span>. 
-            <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الأذنان من الرأس) (2) </span> فلا يُجزئ مسح بعض الرأس دون بعضه. <br>
-            4 - غسل الرجلين إلى الكعبين؛ <span>لقوله تعالى: (وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ) [المائدة: 6]</span>. <br>
-            5 - الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (1) وغيره. <br>
-            6 - الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (2)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل. 
-        </p>
+        <div>
+            <ol>
+                <li>
+                    غسل الوجه بكامله؛ <span>لقوله تعالى: (إِذَا قُمْتُمْ إِلَى الصَّلَاةِ فَاغْسِلُوا وُجُوهَكُمْ) [المائدة: 6]</span> ومنه المضمضة والاستنشاق؛ لأن الفم والأنف من الوجه. 
+                </li>
+                <li>
+                    غسل اليدين إلى المرفقين؛ <span>لقوله تعالى: (وَأَيْدِيَكُمْ إِلَى الْمَرَافِقِ) [المائدة: 6</span> 
+                </li>
+                <li>
+                    مسح الرأس كله مع الأذنين: <span>لقوله تعالى: (وَامْسَحُوا بِرُءُوسِكُمْ) [المائدة: 6</span>. 
+                    <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الأذنان من الرأس) (2) </span> فلا يُجزئ مسح بعض الرأس دون بعضه
+                </li>
+                <li>
+                    غسل الرجلين إلى الكعبين؛ <span>لقوله تعالى: (وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ) [المائدة: 6]</span>. 
+                </li>
+                <li>
+                    الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (1) وغيره. 
+                </li>
+                <li>
+                    الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (2)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل. 
+                </li>
+            </ol>
+        </div>
         <hr>
         <ol>
             <li>
                 (1) رواه البخاري برقم (1)، ومسلم برقم (1907).
+            </li>
+            <li>
                 (2) رواه الترمذي برقم (37) وابن ماجه برقم (443) وصححه الألباني (صحيح سنن ابن ماجه برقم 357، والسلسلة الصحيحة برقم 36) وأفاض الشيخ -رحمه الله- في جمع طرقه والكلام عليه.
             </li>
         </ol>
