--- a/sec2.html
+++ b/sec2.html
@@ -150,18 +150,17 @@
         <h1>  
             الدليل علي وجوبه(من/متي)
         </h1>
-        <p>
-        <span class="til">     أما الدليل على وجوبه: </span> <br>
+        <div>
+        <h4>     أما الدليل على وجوبه: </h4> 
         <span>
                     فقوله تعالى (يَا أَيُّهَا الَّذِينَ آمَنُوا إِذَا قُمْتُمْ إِلَى الصَّلَاةِ فَاغْسِلُوا وُجُوهَكُمْ وَأَيْدِيَكُمْ إِلَى الْمَرَافِقِ وَامْسَحُوا بِرُءُوسِكُمْ وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ وَإِنْ كُنْتُمْ جُنُبًا فَاطَّهَّرُوا وَإِنْ كُنْتُمْ مَرْضَى أَوْ عَلَى سَفَرٍ أَوْ جَاءَ أَحَدٌ مِنْكُمْ مِنَ الْغَائِطِ أَوْ لَامَسْتُمُ النِّسَاءَ فَلَمْ تَجِدُوا مَاءً فَتَيَمَّمُوا صَعِيدًا طَيِّبًا فَامْسَحُوا بِوُجُوهِكُمْ وَأَيْدِيكُمْ مِنْهُ مَا يُرِيدُ اللَّهُ لِيَجْعَلَ عَلَيْكُمْ مِنْ حَرَجٍ وَلَكِنْ يُرِيدُ لِيُطَهِّرَكُمْ وَلِيُتِمَّ نِعْمَتَهُ عَلَيْكُمْ لَعَلَّكُمْ تَشْكُرُونَ) [المائدة: 6] 
         </span>
-                </span> (2). <br> <span class="til"> و أما متي يجب :</span> <br> فإذا دخل وقت الصلاة أو أراد الإنسان الفعل الذي يشترط له الوضوء، وإن لم يكن ذلك متعلقاً بوقت، كالطواف ومس المصحف .
-        </p>
+                (2). <br> <h4> و أما متي يجب :</h4> فإذا دخل وقت الصلاة أو أراد الإنسان الفعل الذي يشترط له الوضوء، وإن لم يكن ذلك متعلقاً بوقت، كالطواف ومس المصحف .
+        </div>
         <hr>
         <ol>
             <li>
-                رواه أحمد (3/ 201)، وأبو داود برقم (494)، والترمذي برقم (407) وقال: "حديث حسن"، وصححه الحاكم في المستدرك
-                (1/ 201)، وصححه الألباني (الإرواء برقم 247).
+                (2) [سوره المائده : 6]
             </li>
         </ol>
     </section>
