--- a/sec5.htm
+++ b/sec5.htm
@@ -150,19 +150,28 @@
         <h1>  
             سنن الوضوء
         </h1>
-        <p>
-            <span class="til"> هناك أفعال يستحب فعلها عند الوضوء ويؤجر عليها من فعلها، ومن تركها فلا حرج عليه، وتسمى هذه الأفعال بسنن الوضوء، وهي: <br></span>
-            1 - التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (3)</span> . <br>
-            2 - السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (4</span> . <br>
-            3 - غسل الكفين ثلاثاً في أول الوضوء: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - ذلك، إذ كان يغسل كفيه ثلاثاً كما ورد في صفة وضوئه.
-        </p>
+        <div>
+             هناك أفعال يستحب فعلها عند الوضوء ويؤجر عليها من فعلها، ومن تركها فلا حرج عليه، 
+            <h4>تسمى هذه الأفعال بسنن الوضوء، وهي : </h4> 
+            <ol>
+                <li>
+                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (3)</span> 
+                </li>
+                <li>
+                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (4</span> 
+                </li>
+                <li>
+                    غسل الكفين ثلاثاً في أول الوضوء: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - ذلك، إذ كان يغسل كفيه ثلاثاً كما ورد في صفة وضوئه.
+                </li>
+            </ol>
+        </div>
         <hr>
         <ol>
             <li>
-                (1) أخرجه مسلم برقم (235).
-                (2) رواه أحمد (3/ 424)، وأبو داود برقم (175)، وصححه الألباني. انظر إرواء الغليل (1/ 127).
                 (3) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
                 (إرواء الغليل 1/ 122).
+            </li>
+            <li>
                 (4) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
             </li>
         </ol>
