--- a/sec7.htm
+++ b/sec7.htm
@@ -150,20 +150,36 @@
         <h1>  
             ما يجب له الوضوء
         </h1>
-        <p>
-            <span class="til">ويجب على المكلف فعل الوضوء للأمور الآتية:</span> <br>
-            1 - الصلاة: لحديث ابن عمر مرفوعاً: <span class="dif">(لا يقبل الله صلاة بغير طُهُور، ولا صدقة من غلول) (4)</span> . <br>
-            2 - الطواف بالبيت الحرام فرضاً كان أو نفلاً: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - (فإنه توضأ ثم طاف بالبيت) (5)، و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الطواف بالبيت صلاة إلا أن الله أباح فيه الكلام) (6)</span> ، ولمنعه الحائض من الطواف حتى تطهر . <br>
-            3 - مس المصحف ببشرته بلا حائل: <span>لقوله تعالى: (لَا يَمَسُّهُ إِلَّا الْمُطَهَّرُونَ) [الواقعة: 79]</span> .و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يمس القرآن إلا طاهر) (1)</span> .
-        </p>
+        <div>
+            <h4>           
+                 ويجب على المكلف فعل الوضوء للأمور الآتية:
+            </h4>
+            <ol>
+                <li>
+                    الصلاة: لحديث ابن عمر مرفوعاً: <span class="dif">(لا يقبل الله صلاة بغير طُهُور، ولا صدقة من غلول) (4)</span> .
+                </li>
+                <li>
+                    الطواف بالبيت الحرام فرضاً كان أو نفلاً: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - (فإنه توضأ ثم طاف بالبيت) (5)، و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الطواف بالبيت صلاة إلا أن الله أباح فيه الكلام) (6)</span> ، ولمنعه الحائض من الطواف حتى تطهر .
+                </li>
+                <li>
+                    مس المصحف ببشرته بلا حائل: <span>لقوله تعالى: (لَا يَمَسُّهُ إِلَّا الْمُطَهَّرُونَ) [الواقعة: 79]</span> .و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يمس القرآن إلا طاهر) (1)</span> .
+                </li>
+            </ol>
+        </div>
         <hr>
         <ol>
             <li>
                 (1) أخرجه مسلم برقم (235).
-                (2) رواه أحمد (3/ 424)، وأبو داود برقم (175)، وصححه الألباني. انظر إرواء الغليل (1/ 127).
-                (3) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
+            </li>
+            <li>
+                (4) رواه أحمد (3/ 424)، وأبو داود برقم (175)، وصححه الألباني. انظر إرواء الغليل (1/ 127).
+            </li>
+            <li>
+                (5) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
                 (إرواء الغليل 1/ 122).
-                (4) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
+            </li>
+            <li>
+                (6) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
             </li>
         </ol>
     </section>
